src/assets/styles/style.css
@import url("https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap");
:root {
  --primary: #ef5350;
  --primary-hover: #f44336;
  --secondary: #4db6ac;
  --secondary-hover: #009688;
  --gray: #9f9f9f;
  --bg: #212121;
  --title: #d2d2d2;
  --color: #e4e4e4;
  --border: #575757;
  --layer: #2f2f2f;
  --code: #2f2f2f;
  --shadow: rgba(255, 255, 255, 0.1);
}

@media (prefers-color-scheme: light) {
  :root {
    --primary: #ef5350;
    --primary-hover: #f44336;
    --secondary: #4db6ac;
    --secondary-hover: #009688;
    --gray: #7f7f7f;
    --bg: white;
    --title: #212121;
    --color: #424242;
    --border: #e0e0e0;
    --layer: #eeeeee;
    --code: #2f2f2f;
    --shadow: rgba(0, 0, 0, 0.2);
  }
}

@media only screen and (max-width: 600px) {
  html {
    font-size: 16px;
    --container-padding: 1rem;
    --split-width: 100%;
  }
}
@media only screen and (min-width: 600px) {
  html {
    font-size: 17px;
    --container-padding: 1.5rem;
    --split-width: 100%;
  }
}
@media only screen and (min-width: 768px) {
  html {
    font-size: 18px;
    --container-padding: 2rem;
    --split-width: 45%;
  }
}
@media only screen and (min-width: 992px) {
  html {
    font-size: 19px;
    --container-padding: 3rem;
    --split-width: 45%;
  }
}
@media only screen and (min-width: 1200px) {
  html {
    font-size: 20px;
    --container-padding: 4rem;
    --split-width: 45%;
  }
}

* {
  box-sizing: border-box;
}

* + * {
  margin: 1rem 0;
}

html {
  font-family: "Source Sans Pro", sans-serif;
  font-size: 16px;
  background-color: var(--bg);
  color: var(--color);
}

p, blockquote {word-break: break-word;}
span.gray { color: var(--gray) }
span.primary { color: var(--primary) }
span.secondary { color: var(--secondary) }
span.monospace {font-family: "Source Code Pro", monospace;}

.split {
  display: flex;
  justify-content: space-around;
  align-items: flex-start;
  flex-wrap: wrap;
  flex-direction: row;
}
.split > * {
  width: var(--split-width)
}

.container {
  padding: var(--container-padding);;
  margin: auto;
}

h6 {
  font-size: 1rem;
}
h5 {
  font-size: 1.2rem;
}
h4 {
  font-size: 1.5rem;
}
h3 {
  font-size: 2rem;
}
h2 {
  font-size: 2.2rem;
}
h1 {
  font-size: 2.5rem;
  margin-top:1rem;
}
h1,
h2,
h3,
h4,
h5,
h6 {
  color: var(--title);
}

button {
  font-size: 1rem;
  padding: 1rem;
  color: var(--bg);
  background: var(--primary);
  border-radius: 0.5rem;
  border-width: 0;
}
button:hover {
  background-color: var(--layer);
  background: var(--primary-hover);
}
button.secondary {
  background-color: var(--secondary);
}
button.secondary:hover {
  background-color: var(--secondary-hover);
}

a {
  color: var(--primary);
}
a:hover {
  color: var(--primary-hover);
  text-decoration: underline;
}
a.secondary {
  color: var(--secondary);
}
a.secondary:hover {
  color: var(--secondary-hover);
}

mark {
  background-color: var(--primary);
}

code {
  font-family: "Source Code Pro", sans-serif;
  padding: 0rem 0.5rem;
  background-color: var(--layer);
  border-radius: 0.3rem;
}
pre {
  overflow: auto;
  padding: 1rem;
  background-color: var(--code);
  border-radius: 0.5rem;
}
pre > code {
  padding: 0;
  margin: 0;
  word-break: normal;
  white-space: pre;
  font-size: 0.8rem;
}

blockquote {
  padding: 0.5rem 1rem;
  background-color: var(--layer);
  border-left: 0.5rem solid var(--border);
}

img {
  width: 100%;
}

table {
  border-spacing: 0;
  border-collapse: collapse;
  display: block;
  width: max-content;
  max-width: 100%;
  overflow: auto;
}
td,
th {
  padding: 0;
}
th,
td {
  padding: 0.5rem 1.3rem;
  border: 1px solid var(--border);
}

hr {
  height: 0.2rem;
  background-color: var(--border);
  border: 0;
}

.card {
  padding: 1rem;
  border-radius: 0.5rem;
  background-color: var(--layer);
}

.tag {
  font-size: 0.8rem;
  padding: 0.5rem;
  display: inline-block;
  border-radius: 2rem;
  border: 0.1rem solid var(--primary);
  color: var(--primary);
  background-color: transparent;
  margin-left: 0.5em;
  margin-right: 0.5rem;
}
.tag:hover {
  color: var(--bg);
  background-color: var(--primary);
}
.navbar {
  background-color: var(--layer);
  display:flex;
  align-items:center;
  justify-content: space-between;
  padding: 0 1rem;
  border-bottom: 0.05rem solid var(--border);
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  z-index: 10;
}
.footer {
  background-color: var(--layer);
  padding: 1em;
  width:100%;
  border-top: 0.05rem solid var(--border);
  position:relative;
  top:1rem;
}
.footerLinks {
  display:flex;
  justify-content:space-around;
  align-items:center;
}

/*!
  Theme: GitHub Dark
  Description: Dark theme as seen on github.com
  Author: github.com
  Maintainer: @Hirse
  Updated: 2021-05-15
  Outdated base version: https://github.com/primer/github-syntax-dark
  Current colors taken from GitHub's CSS
*/

.hljs {
  color: #c9d1d9;
  background: var(--code);
}

.hljs-doctag,
.hljs-keyword,
.hljs-meta .hljs-keyword,
.hljs-template-tag,
.hljs-template-variable,
.hljs-type,
.hljs-variable.language_ {
  /* prettylights-syntax-keyword */
  color: #ff7b72;
}

.hljs-title,
.hljs-title.class_,
.hljs-title.class_.inherited__,
.hljs-title.function_ {
  /* prettylights-syntax-entity */
  color: #d2a8ff;
}

.hljs-attr,
.hljs-attribute,
.hljs-literal,
.hljs-meta,
.hljs-number,
.hljs-operator,
.hljs-variable,
.hljs-selector-attr,
.hljs-selector-class,
.hljs-selector-id {
  /* prettylights-syntax-constant */
  color: #79c0ff;
}

.hljs-regexp,
.hljs-string,
.hljs-meta .hljs-string {
  /* prettylights-syntax-string */
  color: #a5d6ff;
}

.hljs-built_in,
.hljs-symbol {
  /* prettylights-syntax-variable */
  color: #ffa657;
}

.hljs-comment,
.hljs-code,
.hljs-formula {
  /* prettylights-syntax-comment */
  color: #8b949e;
}

.hljs-name,
.hljs-quote,
.hljs-selector-tag,
.hljs-selector-pseudo {
  /* prettylights-syntax-entity-tag */
  color: #7ee787;
}

.hljs-subst {
  /* prettylights-syntax-storage-modifier-import */
  color: #c9d1d9;
}

.hljs-section {
  /* prettylights-syntax-markup-heading */
  color: #1f6feb;
  font-weight: bold;
}

.hljs-bullet {
  /* prettylights-syntax-markup-list */
  color: #f2cc60;
}

.hljs-emphasis {
  /* prettylights-syntax-markup-italic */
  color: #c9d1d9;
  font-style: italic;
}

.hljs-strong {
  /* prettylights-syntax-markup-bold */
  color: #c9d1d9;
  font-weight: bold;
}

.hljs-addition {
  /* prettylights-syntax-markup-inserted */
  color: #aff5b4;
  background-color: #033a16;
}

.hljs-deletion {
  /* prettylights-syntax-markup-deleted */
  color: #ffdcd7;
  background-color: #67060c;
}

